Fix modal video display bug on safari.

--- a/styles/style.css
+++ b/styles/style.css
@@ -804,6 +804,11 @@
         padding: 1em;
         border: 4px solid rgb(0 0 0);
         background: rgb(255 255 255);
+        overflow: auto;
+    }
+
+    .subsection-modal-container .book-section-video-player {
+        flex: 1 0 auto;
     }
 
     .subsection-modal-text {
@@ -827,12 +832,8 @@
     }
 
     .subsection-modal-container video {
-        min-width: 0;
-        max-width: 77.5vw;
-        max-height: 97%;
         width: 100%;
         background-color: rgb(255 255 255);
-        max-height: initial;
     }
 
     .subsection-modal-container .video-quality-changer {
